Add documentation for edit talk route
